content/networking/gateway-api/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: default
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: '*.gwapi-default.ocp7.stormshift.coe.muc.redhat.com'
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "*.gwapi-default.ocp7.stormshift.coe.muc.redhat.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gwapidefault-cert
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
