content/networking/gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-https
spec:
  parentRefs:
    - kind: Gateway
      name: default
      namespace: openshift-ingress
  hostnames:
    - "simple-https.gwapi-default.ocp7.stormshift.coe.muc.redhat.com"
  rules:
    - backendRefs:
        - name: simple-https
          port: 8080
